manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: goofy.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: goofy-lb-svc
            port:
              number: 80
